--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -97,7 +97,8 @@
         </div>
         <div class="grid">
           <article class="service-card">
-            <div class="service-icon" aria-hidden="true"></div>
+           <img src="assets/mantenimiento-generalf-Photoroom.png" width="60" height="60">
+
             <div>
               <h3>Mantenimiento General</h3>
               <p>Incluye revisión completa de fluidos y ajustes básicos.</p>
@@ -105,7 +106,7 @@
             <a class="button ghost" href="#">Próximas Citas</a>
           </article>
           <article class="service-card">
-            <div class="service-icon" aria-hidden="true"></div>
+            <img src="assets/transparent-Photoroom.png" width="60" height="60">
             <div>
               <h3>Diagnóstico Eléctrico</h3>
               <p>Soluciones precisas para problemas eléctricos del vehículo.</p>
@@ -113,7 +114,7 @@
             <a class="button ghost" href="#">Próximas Citas</a>
           </article>
           <article class="service-card">
-            <div class="service-icon" aria-hidden="true"></div>
+            <img src="assets/aliniacion-Photoroom.png" width="60" height="60">
             <div>
               <h3>Alineación y Balanceo</h3>
               <p>Mejora el rendimiento y la seguridad en carretera.</p>
