--- a/pages/resenas-mecanicos.html
+++ b/pages/resenas-mecanicos.html
@@ -126,7 +126,7 @@
 
         <article class="review-card">
           <header class="review-header">
-            <img src="https://images.unsplash.com/photo-1600385341218-7c102cd51332?auto=format&fit=facearea&w=200&h=200&q=80" alt="Foto de Camila Herrera" />
+            <img src="assets/camila.jpg" alt="Foto de Camila Herrera" />
             <div class="identity">
               <h3>Camila Herrera</h3>
               <div class="rating" aria-label="Calificación 4.8 de 5">
@@ -153,7 +153,7 @@
 
         <article class="review-card">
           <header class="review-header">
-            <img src="https://images.unsplash.com/photo-1531973991438-9045760d7da6?auto=format&fit=facearea&w=200&h=200&q=80" alt="Foto de Ricardo Álvarez" />
+            <img src="assets/Ford-Mustang-1967.jpg" alt="Foto de Ricardo Álvarez" />
             <div class="identity">
               <h3>Ricardo Álvarez</h3>
               <div class="rating" aria-label="Calificación 4.6 de 5">
