Add Mechapp help chatbot

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -6,6 +6,7 @@
     <title>Panel de administración | AutoServ</title>
     <link rel="stylesheet" href="../Styles/paginainicio.css" />
     <link rel="stylesheet" href="../Styles/admin.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -123,6 +124,7 @@
       </tr>
     </template>
 
+    <script src="../src/chatbot.js" defer></script>
     <script src="../src/admin.js" type="module"></script>
   </body>
 </html>
