--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Styles/agendar-cita.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
   </head>
   <body>
     <header class="site-header">
@@ -195,6 +196,7 @@
       </div>
     </main>
 
+    <script src="../src/chatbot.js" defer></script>
     <script src="../src/appointments.js" defer></script>
   </body>
 </html>
