--- a/pages/cambiar-contrasena.html
+++ b/pages/cambiar-contrasena.html
@@ -13,6 +13,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../Styles/auth.css" />
+        <link rel="stylesheet" href="../Styles/chatbot.css" />
     </head>
     <body>
         <main>
@@ -113,6 +114,7 @@
             </section>
         </main>
 
+        <script src="../src/chatbot.js" defer></script>
         <script src="../src/password-visibility.js" defer></script>
         <script src="../src/profile-update.js" defer></script>
     </body>
