--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../Styles/auth.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
 </head>
 
 <body>
@@ -67,6 +68,7 @@
             </div>
         </section>
     </main>
+    <script src="../src/chatbot.js" defer></script>
     <script src="../src/password-visibility.js" defer></script>
     <script src="../src/auth-forms.js" defer></script>
 </body>
