--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -15,6 +15,7 @@
 
   <!-- Tus estilos -->
   <link rel="stylesheet" href="../Styles/paginainicio.css" />
+  <link rel="stylesheet" href="../Styles/chatbot.css" />
 
 </head>
 
@@ -473,6 +474,7 @@
   </script>
 
   <!-- SDK de Google Maps (una sola vez). Reemplaza la key si corresponde -->
+  <script src="../src/chatbot.js" defer></script>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATF7l8QIpx6dlv2icl48TYG5N1PJVLdcw&callback=initGMap&libraries=places&v=weekly"
     async defer></script>
