--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../Styles/perfil.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
 </head>
 
 <body>
@@ -200,6 +201,7 @@
     <!-- Cargar EmailJS ANTES de profile.js -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
 
+    <script src="../src/chatbot.js" defer></script>
     <!-- Tu JS de la página (usa EmailJS y lee los data-atributos del form) -->
     <script src="../src/profile.js" defer></script>
 </body>
