--- a/pages/registro-taller.html
+++ b/pages/registro-taller.html
@@ -13,6 +13,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../Styles/registro-taller.css" />
+        <link rel="stylesheet" href="../Styles/chatbot.css" />
     </head>
     <body>
         <header class="site-header">
@@ -147,5 +148,7 @@
                 </form>
             </section>
         </main>
+
+        <script src="../src/chatbot.js" defer></script>
     </body>
 </html>
