--- a/pages/registro.html
+++ b/pages/registro.html
@@ -13,6 +13,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../Styles/auth.css" />
+        <link rel="stylesheet" href="../Styles/chatbot.css" />
     </head>
     <body>
         <main>
@@ -159,6 +160,7 @@
             </section>
         </main>
 
+        <script src="../src/chatbot.js" defer></script>
         <script src="../src/password-visibility.js" defer></script>
         <script src="../src/auth-forms.js" defer></script>
     </body>
