--- a/pages/resenas-mecanicos.html
+++ b/pages/resenas-mecanicos.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="../Styles/resenas.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
   </head>
 
   <body>
@@ -179,5 +180,6 @@
         </article>
       </section>
     </main>
+    <script src="../src/chatbot.js" defer></script>
   </body>
 </html>
