--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="../Styles/paginainicio.css" />
     <link rel="stylesheet" href="../Styles/sobre-nosotros.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
   </head>
   <body>
     <header class="site-header">
@@ -99,5 +100,6 @@
       </div>
       <p class="footer-note">© 2024 Mechapp. Todos los derechos reservados.</p>
     </footer>
+    <script src="../src/chatbot.js" defer></script>
   </body>
 </html>
