--- a/pages/editar-nombre.html
+++ b/pages/editar-nombre.html
@@ -13,6 +13,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../Styles/auth.css" />
+        <link rel="stylesheet" href="../Styles/chatbot.css" />
     </head>
     <body>
         <main>
@@ -49,6 +50,7 @@
             </section>
         </main>
 
+        <script src="../src/chatbot.js" defer></script>
         <script src="../src/profile-update.js" defer></script>
     </body>
 </html>
