--- a/pages/recuperar-contrasena.html
+++ b/pages/recuperar-contrasena.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../Styles/auth.css" />
+    <link rel="stylesheet" href="../Styles/chatbot.css" />
   </head>
   <body>
     <main>
@@ -78,6 +79,8 @@
 
     <!-- SDK de EmailJS ANTES del script inline -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js" defer></script>
+
+    <script src="../src/chatbot.js" defer></script>
 
     <!-- Script inline: igual estilo que en perfil -->
     <script defer>
