--- a/pages/terminos-y-condiciones.html
+++ b/pages/terminos-y-condiciones.html
@@ -11,6 +11,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="../Styles/terms.css" />
+        <link rel="stylesheet" href="../Styles/chatbot.css" />
     </head>
     <body>
         <header class="terms-header">
@@ -75,5 +76,6 @@
                 </footer>
             </article>
         </main>
+        <script src="../src/chatbot.js" defer></script>
     </body>
 </html>
