--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -96,7 +96,7 @@
           <h4>¿Quieres saber más?</h4>
           <p>Escríbenos a <a href="mailto:contacto@mechapp.com">contacto@mechapp.com</a></p>
         </div>
-        <a class="button" href="./paginainicio.html#ubicacion">Encuentra un taller cercano</a>
+        <a class="button" href="./paginainicio.html#ubicacion" style="color: black;">Encuentra un taller cercano</a>
       </div>
       <p class="footer-note">© 2024 Mechapp. Todos los derechos reservados.</p>
     </footer>
