Add mechanic workshop profiles and review page

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -60,6 +60,16 @@
       </div>
     </section>
 
+    <section class="workshops" aria-labelledby="workshops-title">
+      <div class="section-header">
+        <div>
+          <h2 id="workshops-title">Talleres verificados en Mechapp</h2>
+          <p>Conoce a los especialistas inscritos y accede a su perfil para solicitar servicios o dejar una reseña.</p>
+        </div>
+      </div>
+      <div class="workshops-grid" data-home-workshops aria-live="polite"></div>
+    </section>
+
     <section class="search-section" aria-labelledby="buscador">
       <div class="section-header">
         <div>
@@ -171,6 +181,9 @@
       <p>soporte@autoserv.com</p>
     </div>
   </footer>
+
+  <script src="../src/workshops-data.js"></script>
+  <script src="../src/home-workshops.js" defer></script>
 
   <!-- Tu lógica general (búsqueda) la dejé intacta -->
   <script>
