--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -82,15 +82,18 @@
             </div>
 
             <div class="field">
-              <label for="scheduled-for">Fecha y hora preferida</label>
-              <input
-                type="datetime-local"
-                id="scheduled-for"
-                name="scheduled-for"
-                min=""
-                required
-              />
+              <label for="visit-date">Día de la visita</label>
+              <div class="calendar" id="visit-calendar" aria-live="polite"></div>
+              <input type="hidden" id="visit-date" name="visit-date" />
+              <p class="field-helper" id="calendar-helper">Selecciona un mecánico para ver la disponibilidad.</p>
             </div>
+
+            <div class="field">
+              <label for="visit-time">Hora preferida</label>
+              <input type="time" id="visit-time" name="visit-time" required />
+            </div>
+
+            <input type="hidden" id="scheduled-for" name="scheduled-for" />
 
             <div class="field">
               <span>Tipo de visita</span>
