Add workshop review detail page and navigation links

--- a/pages/perfil-taller.html
+++ b/pages/perfil-taller.html
@@ -26,7 +26,7 @@
       </a>
       <nav class="header-actions" aria-label="Acciones rápidas">
         <a class="button ghost" href="./paginainicio.html">Inicio</a>
-        <a class="button" href="./resenas-mecanicos.html">Ver reseñas</a>
+        <a class="button" href="./resenas-mecanicos.html" data-view-reviews-nav>Ver reseñas</a>
       </nav>
     </header>
 
@@ -58,6 +58,7 @@
           </dl>
           <div class="workshop-hero__actions">
             <a class="button button-primary" data-review-button href="#">Redactar reseña</a>
+            <a class="button ghost" data-view-reviews href="./resenas-mecanicos.html">Ver reseñas</a>
             <a class="button ghost" href="./agendar-cita.html">Agendar cita</a>
           </div>
         </div>
