Actualiza métricas de citas completadas en el perfil

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -53,10 +53,12 @@
             </div>
 
             <div class="metrics" aria-label="Indicadores de la cuenta">
-                <article class="metric-card">
+                <article class="metric-card" data-profile-completed-appointments-card data-visible-for="mecanico">
                     <span class="metric-label">Citas completadas</span>
-                    <strong class="metric-value">28</strong>
-                    <span class="metric-caption">En los últimos 12 meses</span>
+                    <strong class="metric-value" data-profile-completed-appointments-value>0</strong>
+                    <span class="metric-caption" data-profile-completed-appointments-caption>
+                        En los últimos 12 meses
+                    </span>
                 </article>
                 <article class="metric-card" data-profile-average-rating-card>
                     <span class="metric-label">Puntuación promedio</span>
@@ -64,11 +66,6 @@
                     <span class="metric-caption" data-profile-average-rating-caption>
                         Registra tu taller para comenzar a recibir reseñas de tus clientes.
                     </span>
-                </article>
-                <article class="metric-card">
-                    <span class="metric-label">Vehículos registrados</span>
-                    <strong class="metric-value">2</strong>
-                    <span class="metric-caption">Sedán 2020 · SUV 2022</span>
                 </article>
             </div>
 
