--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -29,7 +29,7 @@
       <a href="#inicio" class="nav-link active">Inicio</a>
       <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
       <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
-      <a href="./agendar-cita.html" class="nav-link">Agendar cita</a>
+      <a href="./agendar-cita.html" class="nav-link" data-visible-for="usuario" hidden>Agendar cita</a>
       <a href="#ubicacion" class="nav-link">Ubicación</a>
       <a href="./perfil.html" class="nav-link" data-auth-visibility="authenticated" hidden>
         Perfil
@@ -42,10 +42,6 @@
     <div class="header-actions">
       <a href="./login.html" class="button button-primary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
       <a href="./perfil.html" class="button ghost" data-auth-visibility="authenticated" hidden>Mi Perfil</a>
-      <a href="./registro-taller.html" class="button ghost" data-auth-visibility="authenticated"
-        data-visible-for="mecanico" hidden>
-        Registrar Taller
-      </a>
     </div>
   </header>
 
