--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -136,29 +136,10 @@
                 </div>
                 <a class="button ghost" href="#">Descargar historial</a>
             </div>
-            <div class="history-list">
-                <article class="history-item">
-                    <div>
-                        <h3>AutoMasters · Centro</h3>
-                        <p class="item-meta">Revisión general · 12 de abril de 2024</p>
-                    </div>
-                    <span class="status success">Completado</span>
-                </article>
-                <article class="history-item">
-                    <div>
-                        <h3>Taller Ruiz</h3>
-                        <p class="item-meta">Alineación y balanceo · 22 de febrero de 2024</p>
-                    </div>
-                    <span class="status success">Completado</span>
-                </article>
-                <article class="history-item">
-                    <div>
-                        <h3>ElectroAuto Norte</h3>
-                        <p class="item-meta">Diagnóstico eléctrico · 15 de enero de 2024</p>
-                    </div>
-                    <span class="status pending">Seguimiento</span>
-                </article>
-            </div>
+            <div class="history-list" data-client-history></div>
+            <p class="empty-state" data-client-history-empty hidden>
+                Aún no tienes visitas registradas. Agenda una cita para ver tu historial.
+            </p>
         </section>
 
     </main>
